# mini-fs

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/disk/: block_device.rs  file_disk.rs  init.rs  mod.rs  types.rs
src/fs/: config.rs  data_area.rs  data_block_bitmap.rs  directory.rs  error.rs  inode_bitmap.rs  inode_table.rs  mod.rs  super_block.rs
src/shell/: command.rs  mod.rs  parse.rs
