[package]
name = "file-system"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2"
dialoguer = "0.11"
whoami = "1.5"
reedline = "0.43"
indicatif = "0.17"
crossterm = "0.27"
dirs = "5"
serde = "1.0.228"
uuid = { version = "1", features = ["v4"] }
bincode = "1.3"
chrono = "0.4.42"
bitflags = "2.10.0"
